--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 click==6.7
+enum34==1.1.6
 Flask==0.12.2
+Flask-Cache==0.13.1
 Flask-SQLAlchemy==2.2
+greenlet==0.4.13
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
